welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:6: error: value unary_+ is not a member of String
		rep = +"Fizz"
                      ^fizzBuzz:11: error: value unary_+ is not a member of String
		rep = +"Buzz"
                      ^